--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
 <h3> Rock - Paper - Scissors </h3>
 <body>
     
-    <p></p>
+    <p> </p>
+<script>src= "main.js"</script>
 </body>
-<script>
-    function computerPlay(){
-        return 
-    }
-</script>
 <footer> 
 <footer>
 </html>  
