--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 </head>
 <h3> Rock - Paper - Scissors </h3>
 <body>
-    
-    <p> </p>
-<script>src= "main.js"</script>
+    <div id="scoreBoard"> 
+        <div id="wins">Wins:</div>
+        <div id="looses">Looses:</div>
+        <div id="ties">Ties:</div>
+        <div id="computerTurn">Computer pick :</div>
+    </div>
+    <p></p>
 </body>
+<script>src= "main.js"</script>
 <footer> 
 <footer>
-</html>  
+</html>   
+
