--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <div id="computerTurn">Computer pick :</div>
     </div>
     <p></p>
+    <div id=playerPicks>
+        <button id="rock" class="rock pick" value="rock">Rock</button>
+        <button id="scissors" class="scissors pick" value="rock">Scissors</button>
+        <button id="paper" class="paper pick" value="paper">Paper</button>
+        <button class="reset">Reset</button>
+    </div>
 </body>
 <script>src= "main.js"</script>
 <footer> 
