--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-<link rel="stylesheet" href="style.css">
-</head>
-<h3> Rock - Paper - Scissors </h3>
 <body>
-    <div id="scoreBoard"> 
+    <div id="scoreboard">
         <div id="wins">Wins:</div>
-        <div id="looses">Looses:</div>
+        <div id="losses">Losses:</div>
         <div id="ties">Ties:</div>
-        <div id="computerTurn">Computer pick :</div>
+        <div id="computerPick">Computer chose:</div>
     </div>
-    <p></p>
-    <div id=playerPicks>
-        <button id="rock" class="rock pick" value="rock">Rock</button>
-        <button id="scissors" class="scissors pick" value="rock">Scissors</button>
-        <button id="paper" class="paper pick" value="paper">Paper</button>
-        <button class="reset">Reset</button>
+    <div id="playerChoices">
+        <button id="rock" class="rock choice" value="rock">Rock</button>
+        <button id="paper" class="paper choice" value="paper">Paper</button>
+        <button id="scissors" class="scissors choice" value="scissors">Scissors</button>
+        <button class="reset">Reset Game</button>
     </div>
+    
 </body>
-<script>src= "main.js"</script>
-<footer> 
-<footer>
-</html>   
+<script src="scripts.js"></script>
+</html>
 
